--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>Bauunternehmen Müller | Hochwertige Bau- & Renovierungsarbeiten</title>
+  <title>HausKraft | Bau & Renovierung in Göppingen und Umgebung</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Ihr zuverlässiger Partner für Treppenbau, Pool & Garten, Badezimmer, Decken & Böden sowie Innen- und Außenrenovierungen in ganz Bayern.">
+  <meta name="description" content="Ihr Meisterbetrieb für Treppen, Pools, Bäder, Gärten – HausKraft aus Göppingen.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <!-- HEADER / NAV -->
   <header class="top">
     <div class="container flex sb">
-      <a class="logo" href="#home">Bau&nbsp;Müller</a>
+      <a class="logo" href="#home">HausKraft</a>
 
       <button id="navToggle" aria-label="Navigation öffnen" aria-expanded="false">
         <span></span><span></span><span></span>
@@ -36,32 +36,13 @@
   <!-- HERO -->
   <section id="home" class="hero">
     <div class="hero__text">
-      <h1>Hochwertige Bau- & Renovierungsarbeiten aus einer Hand</h1>
+      <h1>Meisterliche Bau- & Renovierungsarbeiten in Göppingen</h1>
       <p>Von der Treppe bis zum Garten – wir machen Ihre Immobilie besser.</p>
       <a class="btn" href="#kontakt">Kostenloses Angebot anfragen</a>
     </div>
   </section>
 
-  <!-- ABOUT -->
-  <section id="about" class="py">
-    <div class="container grid2">
-      <div>
-        <h2>Über uns</h2>
-        <p>
-          Seit über 15 Jahren steht <strong>Bauunternehmen Müller</strong> für solides Handwerk, Termintreue und faire Preise.
-          Geschäftsführer Max Müller lernte das Handwerk von der Pike auf und leitet heute ein kleines, eingespieltes Team.
-        </p>
-        <p>Egal ob Privatkunde, Architekt oder Immobilienfirma – Qualität und Vertrauen sind das Fundament unserer Arbeit.</p>
-        <ul class="check">
-          <li>15+ Jahre Erfahrung</li>
-          <li>Meisterbetrieb zertifiziert</li>
-          <li>5-Jahres-Garantie auf ausgewählte Leistungen</li>
-        </ul>
-      </div>
-      <figure>
-        <img src="img/about.jpg" alt="Max Müller im Bau">
-      </figure>
-    </div>
+  
   </section>
 
   <!-- SERVICES -->
@@ -81,7 +62,28 @@
           <p>Schwimmteiche, Swimmingpools, Pflaster- & Terrassenarbeiten – ganzjährig nutzbar.</p>
         </article>
 
-        <article>
+    <!-- ABOUT -->
+  <section id="about" class="py">
+    <div class="container grid2">
+      <div>
+        <h2>Über uns</h2>
+        <p>
+          Seit über 15 Jahren steht <strong>Bauunternehmen Müller</strong> für solides Handwerk, Termintreue und faire Preise.
+          Geschäftsführer Max Müller lernte das Handwerk von der Pike auf und leitet heute ein kleines, eingespieltes Team.
+        </p>
+        <p>Egal ob Privatkunde, Architekt oder Immobilienfirma – Qualität und Vertrauen sind das Fundament unserer Arbeit.</p>
+        <ul class="check">
+          <li>15+ Jahre Erfahrung</li>
+          <li>Meisterbetrieb zertifiziert</li>
+          <li>5-Jahres-Garantie auf ausgewählte Leistungen</li>
+        </ul>
+      </div>
+      <figure>
+        <img src="img/about.jpg" alt="Max Müller im Bau">
+      </figure>
+    </div>  
+    
+    <article>
           <img src="img/icon-garden.svg" alt="">
           <h3>Gartenbau & Gestaltung</h3>
           <p>Von der Planung bis zur Bepflanzung: Ihr Garten wird zur grünen Oase.</p>
@@ -173,13 +175,12 @@
         <p>Rufen Sie uns an oder schreiben Sie per WhatsApp – wir melden uns binnen 24 h.</p>
 
         <ul class="contact-list">
-          <li><strong>Telefon:</strong> <a href="tel:+4989123456789">+49 89 123 456 789</a></li>
-          <li><strong>WhatsApp:</strong> <a href="https://wa.me/4915112345678" target="_blank">+49 151 123 456 78</a></li>
-          <li><strong>E-Mail:</strong> <a href="mailto:info@bau-mueller.de">info@bau-mueller.de</a></li>
-          <li><strong>Adresse:</strong> Gewerbegebiet 1, 82515 Wolfratshausen</li>
+          <li><strong>Telefon:</strong> <a href="tel:+49 152 064 157 63">+49 152 064 157 63</a></li>
+          <li><strong>WhatsApp:</strong> <a href="https://wa.me/49 152 064 157 63" target="_blank">+49 152 064 157 63</a></li>
+          <li><strong>E-Mail:</strong> <a href="mailto:hauskraft001@gmail.com">hauskraft001@gmail.com</a></li>
         </ul>
 
-        <p>Mo–Fr 07:00–17:00 Uhr | Sa nach Vereinbarung</p>
+        <p>Mo–Sa 07:00–15:00 Uhr</p>
       </div>
 
       <form action="https://formsubmit.co/info@bau-mueller.de" method="POST">
@@ -199,16 +200,16 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
-  <footer class="bg-dark">
-    <div class="container flex sb">
-      <p>&copy; 2024 Bauunternehmen Müller | Alle Rechte vorbehalten</p>
-      <nav>
-        <a href="impressum.html">Impressum</a>
-        <a href="datenschutz.html">Datenschutz</a>
-      </nav>
-    </div>
-  </footer>
+<!-- FOOTER -->
+<footer class="bg-dark">
+  <div class="container flex sb">
+    <p>&copy; 2025 HausKraft | Alle Rechte vorbehalten</p>
+    <nav>
+      <a href="impressum.html">Impressum</a>
+      <a href="datenschutz.html">Datenschutz</a>
+    </nav>
+  </div>
+</footer>
 
   <!-- Google Translate Trigger (optional) -->
   <div id="google_translate_element" class="translate"></div>
