--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <section id="projekte" class="py">
     <div class="container">
       <h2>Projekte & Referenzen</h2>
-      <p class="center">Ein kleiner Auswahl unserer zuletzt abgeschlossenen Bauprojekte.</p>
+      <p class="center">Eine kleine Auswahl unserer zuletzt abgeschlossenen Bauprojekte.</p>
 
       <div class="filter">
         <button data-filter="all" class="active">Alle</button>
@@ -167,4 +167,42 @@
         <ul class="contact-list">
           <li><strong>Telefon:</strong> <a href="tel:+4915206415763">+49 152 064 157 63</a></li>
           <li><strong>WhatsApp:</strong> <a href="https://wa.me/4915206415763" target="_blank">+49 152 064 157 63</a></li>
-          <li><strong>E-Mail:</strong> <a href="mailto:hauskraft001@gmail.com">hauskraft001@gmail.com</
+          <li><strong>E-Mail:</strong> <a href="mailto:hauskraft001@gmail.com">hauskraft001@gmail.com</a></li>
+          <li><strong>Adresse:</strong> 73037 Göppingen</li>
+        </ul>
+        <p>Mo–Sa 07:00–15:00 Uhr</p>
+      </div>
+
+      <form action="https://formsubmit.co/hauskraft001@gmail.com" method="POST">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_subject" value="Neue Anfrage über Webseite">
+        <label>Name *<br><input type="text" name="name" required></label>
+        <label>E-Mail *<br><input type="email" name="email" required></label>
+        <label>Telefon<br><input type="tel" name="phone"></label>
+        <label>Ihre Nachricht *<br><textarea name="message" required></textarea></label>
+        <button class="btn" type="submit">Angebot anfragen</button>
+      </form>
+    </div>
+
+    <!-- Google Map -->
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.!2d9.662!3d48.702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDjCsDAwJzM3LjgiTiAxMcKwMjYnMDEuMCJF!5e0!3m2!1sde!2sde!4v1670000000000" width="100%" height="320" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="bg-dark">
+    <div class="container flex sb">
+      <p>&copy; 2025 HausKraft | Alle Rechte vorbehalten</p>
+      <nav>
+        <a href="impressum.html">Impressum</a>
+        <a href="datenschutz.html">Datenschutz</a>
+      </nav>
+    </div>
+  </footer>
+
+  <!-- SCRIPTS -->
+  <script src="main.js"></script>
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>
+</html>
