--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
   <header class="top">
     <div class="container flex sb">
       <a class="logo" href="#home">HausKraft</a>
-
       <button id="navToggle" aria-label="Navigation öffnen" aria-expanded="false">
         <span></span><span></span><span></span>
       </button>
-
       <nav id="mainNav">
         <ul>
           <li><a href="#home">Start</a></li>
@@ -107,8 +105,9 @@
   <section id="projekte" class="py">
     <div class="container">
       <h2>Projekte & Referenzen</h2>
-      <p class="center">Eine kleine Auswahl unserer zuletzt abgeschlossenen Bauprojekte.</p>
+      <p class="center">Ein kleiner Auswahl unserer zuletzt abgeschlossenen Bauprojekte.</p>
 
+      <!-- Filter buttons (optional) -->
       <div class="filter">
         <button data-filter="all" class="active">Alle</button>
         <button data-filter="treppen">Treppen</button>
@@ -116,6 +115,7 @@
         <button data-filter="bad">Bäder</button>
       </div>
 
+      <!-- Gallery -->
       <div class="gallery" id="gallery">
         <figure class="treppen">
           <a href="img/proj1-full.jpg" data-lightbox="proj">
@@ -165,11 +165,11 @@
         <p>Rufen Sie uns an oder schreiben Sie per WhatsApp – wir melden uns binnen 24 h.</p>
 
         <ul class="contact-list">
-          <li><strong>Telefon:</strong> <a href="tel:+4915206415763">+49 152 064 157 63</a></li>
-          <li><strong>WhatsApp:</strong> <a href="https://wa.me/4915206415763" target="_blank">+49 152 064 157 63</a></li>
+          <li><strong>Telefon:</strong> <a href="tel:+49 152 064 157 63">+49 152 064 157 63</a></li>
+          <li><strong>WhatsApp:</strong> <a href="https://wa.me/49 152 064 157 63" target="_blank">+49 152 064 157 63</a></li>
           <li><strong>E-Mail:</strong> <a href="mailto:hauskraft001@gmail.com">hauskraft001@gmail.com</a></li>
-          <li><strong>Adresse:</strong> 73037 Göppingen</li>
         </ul>
+
         <p>Mo–Sa 07:00–15:00 Uhr</p>
       </div>
 
@@ -186,7 +186,7 @@
 
     <!-- Google Map -->
     <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.!2d9.662!3d48.702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDjCsDAwJzM3LjgiTiAxMcKwMjYnMDEuMCJF!5e0!3m2!1sde!2sde!4v1670000000000" width="100%" height="320" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10651.661037668018!2d11.4336!3d48.0105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDjCsDAwJzM3LjgiTiAxMcKwMjYnMDEuMCJF!5e0!3m2!1sde!2sde!4v1670000000000" width="100%" height="320" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 
@@ -201,8 +201,11 @@
     </div>
   </footer>
 
+  <!-- Google Translate Trigger (optional) -->
+  <div id="google_translate_element" class="translate"></div>
+
   <!-- SCRIPTS -->
   <script src="main.js"></script>
   <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
-</html>
+    </html>
