--- a/impressum.html
+++ b/impressum.html
@@ -1,19 +1,24 @@
-<!doctype html><html lang="de"><head><meta charset="utf-8">
-<title>Impressum | Bau Müller</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <title>Impressum | HausKraft</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="py"><div class="container">
-<h1>Impressum</h1>
-<p>Angaben gemäß § 5 TMG:</p>
-<p>Bauunternehmen Müller GmbH<br>
-Gewerbegebiet 1<br>
-82515 Wolfratshausen</p>
-<p>Vertreten durch: Max Müller<br>
-Kontakt: siehe Kontaktseite<br>
-Registereintrag: HRB 12345, Amtsgericht München<br>
-USt-IdNr.: DE123456789</p>
-<p>Berufsbezeichnung: Bauunternehmer (Bundesrepublik Deutschland)</p>
-</div></section>
-</body></html>
+<section class="py">
+  <div class="container">
+    <h1>Impressum</h1>
+    <p>Angaben gemäß § 5 TMG:</p>
+    <p><strong>Hauskraft GmbH</strong><br>
+    Gewerbegebiet 1<br>
+    73037 Göppingen</p>
+    <p>Vertreten durch: <strong>Hauskraft GmbH</strong><br>
+    Kontakt: siehe Kontaktseite<br>
+    Registereintrag: Amtsgericht Göppingen<br>
+    Berufsbezeichnung: Bauunternehmer (Bundesrepublik Deutschland)</p>
+  </div>
+</section>
+</body>
+</html>
