--- a/index.html
+++ b/index.html
@@ -199,10 +199,7 @@
         <a href="datenschutz.html">Datenschutz</a>
       </nav>
     </div>
-  </footer>
-
-  <!-- Google Translate Trigger (optional) -->
-  <div id="google_translate_element" class="translate"></div>
+  </footer
 
   <!-- SCRIPTS -->
   <script src="main.js"></script>
