--- a/index.html
+++ b/index.html
@@ -13,23 +13,28 @@
 
 <body>
   <!-- HEADER / NAV -->
-  <header class="top">
-    <div class="container flex sb">
-      <a class="logo" href="#home">HausKraft</a>
-      <button id="navToggle" aria-label="Navigation öffnen" aria-expanded="false">
-        <span></span><span></span><span></span>
-      </button>
-      <nav id="mainNav">
-        <ul>
-          <li><a href="#home">Start</a></li>
-          <li><a href="#about">Über uns</a></li>
-          <li><a href="#leistungen">Leistungen</a></li>
-          <li><a href="#projekte">Projekte</a></li>
-          <li><a href="#kontakt">Kontakt</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<header class="top">
+  <div class="container flex sb">
+    <!-- Replace the text with your logo image -->
+    <a class="logo" href="#home">
+      <img src="img/logo.png" alt="HausKraft Logo">
+    </a>
+
+    <button id="navToggle" aria-label="Navigation öffnen" aria-expanded="false">
+      <span></span><span></span><span></span>
+    </button>
+
+    <nav id="mainNav">
+      <ul>
+        <li><a href="#home">Start</a></li>
+        <li><a href="#about">Über uns</a></li>
+        <li><a href="#leistungen">Leistungen</a></li>
+        <li><a href="#projekte">Projekte</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
   <!-- HERO -->
   <section id="home" class="hero">
