--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <!-- HEADER / NAV -->
 <header class="top">
   <div class="container flex sb">
-    <!-- Replace the text with your logo image -->
-    <a class="logo" href="#home">
-      <img src="img/logo.png" alt="HausKraft Logo">
+    <a class="logo" href="https://raw.githubusercontent.com/tattukkatisaa-svg/HausKraft/main/img/Messenger_creation_A1E7A37B-5357-410B-B029-033CAA84096E.jpeg">
+      <img src="https://raw.githubusercontent.com/tattukkatisaa-svg/HausKraft/main/img/Messenger_creation_A1E7A37B-5357-410B-B029-033CAA84096E.jpeg" alt="Logo HausKraft">
     </a>
+    <!-- ... other navigation items ... -->
+  </div>
+</header>
 
     <button id="navToggle" aria-label="Navigation öffnen" aria-expanded="false">
       <span></span><span></span><span></span>
