--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 </head>
 
 <body>
-  <!-- HEADER / NAV -->
+<!-- HEADER / NAV -->
 <header class="top">
   <div class="container flex sb">
+    <!-- Add the logo image here -->
     <a class="logo" href="#home">
-      <img src="https://raw.githubusercontent.com/tattukkatisaa-svg/HausKraft/main/img/Messenger_creation_A1E7A37B-5357-410B-B029-033CAA84096E.jpeg" alt="Logo HausKraft">
+      <img src="https://raw.githubusercontent.com/tattukkatisaa-svg/HausKraft/main/img/Messenger_creation_A1E7A37B-5357-410B-B029-033CAA84096E.jpeg" alt="HausKraft Logo">
     </a>
+
     <button id="navToggle" aria-label="Navigation öffnen" aria-expanded="false">
       <span></span><span></span><span></span>
     </button>
+
     <nav id="mainNav">
       <ul>
         <li><a href="#home">Start</a></li>
